--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lovingbby.github.io/movie-booking",
+  "homepage": "https://lovingbby.github.io/Movie-Booking",
   "name": "movie-booking",
   "private": true,
   "version": "0.0.0",
